# occurrence

./: CHANGELOG.md  LICENSE  README.md  VERIFICATION.md  occurrence theory v1.md  occurrence-theory-ii.md  occurrence-theory.md  occurrence_theory_audit.py  pyproject.toml
.github/workflows/: audit.yml  ci.yml  topographo.yml
docs/: occurrence_theory_prompt.md
tests/: test_audit_certificates.py  test_cayley_dickson.py  test_crack_topology.py  test_gates.py  test_occurrence_theory_audit.py  test_public_api.py  test_sedenion.py
topographo/: README.md  __init__.py
topographo/core/: __init__.py  algebra.py  cayley_dickson.py  gates.py
topographo/ssd/: __init__.py  channel.py  sedenion.py
verify/: README.md  g2_su3_branching.md  g2_su3_branching.sage  occurrence_i_audit.py  occurrence_i_codex_sol.md  occurrence_i_codex_sol.py  occurrence_i_rigor.md  occurrence_i_rigor_death_rate_followup.py  occurrence_i_rigor_death_rate_resolution.py  occurrence_i_rigor_gauge_check.py  occurrence_i_rigor_gauge_check_survival.py  occurrence_i_rigor_historical_d3_test.py  occurrence_i_spectrum.md  occurrence_i_spectrum.sage  occurrence_ii_audit.py  occurrence_ii_branching.md  occurrence_ii_branching.sage  occurrence_ii_claude_code.md  occurrence_ii_codex_sol.md  occurrence_ii_codex_sol.py  occurrence_ii_grok.md  occurrence_ii_reptheory.md  occurrence_ii_reptheory.sage
