[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "topographo"
version = "0.4.0"
description = "Reusable Cayley-Dickson and sedenion settlement math for Topographo."
readme = "topographo/README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "The Swan Factory" }
]
dependencies = [
  "numpy"
]

[project.urls]
Homepage = "https://github.com/TheSwanFactory/occurrence"
Documentation = "https://theswanfactory.github.io/occurrence/"
Source = "https://github.com/TheSwanFactory/occurrence"
Issues = "https://github.com/TheSwanFactory/occurrence/issues"

[tool.setuptools.packages.find]
include = ["topographo*"]

[dependency-groups]
dev = [
    "pdoc>=16.0.0",
    "pytest>=9.1.1",
]
